--- a/Supertetris/Supertetris/Supertetris.csproj
+++ b/Supertetris/Supertetris/Supertetris.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="gefalleneFormen.cs" />
     <Compile Include="Schwierigkeitsgrad.cs" />
     <Compile Include="Spielfeld.cs" />
     <Page Include="MainWindow.xaml">
