Klasse für den Highscore erstellt

--- a/Supertetris/Supertetris/Supertetris.csproj
+++ b/Supertetris/Supertetris/Supertetris.csproj
@@ -55,6 +55,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="gefalleneFormen.cs" />
+    <Compile Include="Highscore.cs" />
     <Compile Include="Schwierigkeitsgrad.cs" />
     <Compile Include="Spielfeld.cs" />
     <Compile Include="Timer.cs" />
