--- a/Supertetris/Supertetris/Supertetris.csproj
+++ b/Supertetris/Supertetris/Supertetris.csproj
@@ -54,7 +54,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="gefalleneFormen.cs" />
     <Compile Include="Schwierigkeitsgrad.cs" />
     <Compile Include="Spielfeld.cs" />
     <Compile Include="Timer.cs" />
@@ -97,6 +96,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
