--- a/Supertetris/Supertetris/Supertetris.csproj
+++ b/Supertetris/Supertetris/Supertetris.csproj
@@ -57,9 +57,11 @@
     <Compile Include="Benutzereingabe.xaml.cs">
       <DependentUpon>Benutzereingabe.xaml</DependentUpon>
     </Compile>
-    <Compile Include="gefalleneFormen.cs" />
     <Compile Include="Highscore.cs" />
     <Compile Include="Schwierigkeitsgrad.cs" />
+    <Compile Include="Spiel.xaml.cs">
+      <DependentUpon>Spiel.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Spieler.cs" />
     <Compile Include="Spielfeld.cs" />
     <Compile Include="Timer.cs" />
@@ -80,6 +82,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Spiel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
